# evo_tts

./: API.md  CMakeLists.txt  NOTICE  README.md
examples/: simple_demo.cpp  streaming_demo.py  streaming_tts_demo.cpp
inc/: tts_api.hpp
inc/internal/: tts_config.hpp  tts_types.hpp
inc/internal/audio/: audio_processor.hpp
inc/internal/backends/: tts_backend.hpp
inc/internal/backends/kokoro/: kokoro_backend.hpp  kokoro_model_downloader.hpp  kokoro_phonemizer.hpp  kokoro_voice_manager.hpp
inc/internal/backends/matcha/: matcha_backend.hpp  matcha_en_backend.hpp  matcha_zh_backend.hpp  matcha_zh_en_backend.hpp  tts_config.hpp  tts_model_downloader.hpp
inc/internal/text/: number_utils.hpp  phoneme_utils.hpp  text_normalizer.hpp  text_utils.hpp  token_utils.hpp
inc/internal/vocoder/: vocoder.hpp
python/: pyproject.toml  setup.py  tts_bindings.cpp
python/evo_tts/: __init__.py  callback.py  engine.py  utils.py
python/examples/: simple_demo.py
src/: tts_backend_factory.cpp  tts_engine.cpp
src/audio/: audio_processor.cpp
src/backends/kokoro/: kokoro_backend.cpp  kokoro_model_downloader.cpp  kokoro_phonemizer.cpp  kokoro_voice_manager.cpp
src/backends/matcha/: matcha_backend.cpp  matcha_en_backend.cpp  matcha_zh_backend.cpp  matcha_zh_en_backend.cpp  tts_model_downloader.cpp
src/text/: number_utils.cpp  phoneme_utils.cpp  text_normalizer.cpp  text_utils.cpp  token_utils.cpp
src/vocoder/: vocoder.cpp
