[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "evo_tts"
version = "1.0.0"
description = "Evo TTS (Text-To-Speech) Python bindings"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "muggle", email = "promuggle@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
keywords = ["tts", "text-to-speech", "matcha", "synthesis"]

[project.optional-dependencies]
dev = ["pytest>=6.0"]

[project.urls]
Homepage = "https://github.com/muggle/tts"

[tool.setuptools]
packages = ["evo_tts"]
